--- a/static/css/create-van.css
+++ b/static/css/create-van.css
@@ -62,6 +62,11 @@ nav {
   cursor: pointer;
 }
 
+.nav__login a {
+  color: black;
+  text-decoration: underline;
+}
+
 section {
   flex-grow: 1;
   width: 100%;
