--- a/templates/update-van.html
+++ b/templates/update-van.html
@@ -16,8 +16,9 @@
         <div class="van-life logo">VANMANGO</div>
       </a>
       <nav>
-        <div class="nav__about-tag">About</div>
-        <div class="nav__vans-tag">Vans</div>
+        <a href="https://github.com/harshitrajsinha/goclient-vanmango" target="_blank" class="nav__github-tag"><img
+            src="../assets/github-icon.png" /></a>
+        <a href="/" class="nav__vans-tag">Vans</a>
         <div class="nav__login">
           {{if .LoggedIn}}
           <a href="/logout">Logout</a>
