--- a/templates/update-van.html
+++ b/templates/update-van.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VanManGo</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" />
-  <link rel="stylesheet" href="../static/css/update-van.css" />
+  <link rel="stylesheet" href="static/css/update-van.css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       </a>
       <nav>
         <a href="https://github.com/harshitrajsinha/goclient-vanmango" target="_blank" class="nav__github-tag"><img
-            src="../assets/github-icon.png" /></a>
+            src="assets/github-icon.png" /></a>
         <a href="/" class="nav__vans-tag">Vans</a>
         <div class="nav__login">
           {{if .LoggedIn}}
