--- a/templates/service-unavailable.html
+++ b/templates/service-unavailable.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VANMANGO</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" />
-  <link rel="stylesheet" href="../static/css/service-unavailable.css" />
+  <link rel="stylesheet" href="static/css/service-unavailable.css" />
 </head>
 
 <body>
