changing file path for css and assets

--- a/templates/update-van.html
+++ b/templates/update-van.html
@@ -17,7 +17,7 @@
       </a>
       <nav>
         <a href="https://github.com/harshitrajsinha/goclient-vanmango" target="_blank" class="nav__github-tag"><img
-            src="assets/github-icon.png" /></a>
+            src="/assets/github-icon.png" /></a>
         <a href="/" class="nav__vans-tag">Vans</a>
         <div class="nav__login">
           {{if .LoggedIn}}
