--- a/templates/page-not-found.html
+++ b/templates/page-not-found.html
@@ -7,13 +7,13 @@
     <title>VANMANGO</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800;900&display=swap" />
-    <link rel="stylesheet" href="static/css/page-not-found.css" />
+    <link rel="stylesheet" href="/static/css/page-not-found.css" />
 </head>
 
 <body>
     <section>
         <h1>404 Page Not Found</h1>
-        <img src="../assets/pagenotfound.png" alt="Page Not Found" />
+        <img src="/assets/pagenotfound.png" alt="Page Not Found" />
     </section>
 </body>
 
